traces/bug_815.txt
src/fflib/problem.cpp:2127: error: DEAD_STORE
  The value written to &K (type Fem2D::Tet const &) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:2127:19: Write of unused value
2125.                 {
2126.                     
2127.                     const Mesh3::Element & K(Th[t]);
                          ^
2128.                     if (all || setoflab.find(Th[t].lab) != setoflab.end())
2129.                         
